# otus_highload_architect_2026

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  init-db.sh  start-monitoring.sh
.devcontainer/: devcontainer.json
configs/: config.yaml  config_debug.yaml  config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  secdist.json  static_config.yaml
jmeter/: test_plan.jmx
jmeter/test_indexes/: throghputs.ods
jmeter/test_replicas/: read_from_replica.csv  read_only_master.csv  replicas_report.odt  write_with quorum.csv
monitoring/: docker-compose.yml
monitoring/grafana/dashboards/: docker-containers.json
monitoring/prometheus/: prometheus.yml
postgresql/: replica-entrypoint.sh  setup-replication.sh
postgresql/data/: initial_data.sql  load_people.sql  load_posts.sql
postgresql/schemas/: db_1.sql
postman/: social-net-service.postman_collection.json
src/: greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  main.cpp
src/auth/: auth_bearer.cpp  auth_bearer.hpp  login.cpp  login.hpp  user_info_cache.hpp
src/db/: data_base.cpp  data_base.hpp
src/friend/: friend_add_handler.cpp  friend_add_handler.hpp  friend_delete_handler.cpp  friend_delete_handler.hpp
src/post/: post_create_handler.cpp  post_create_handler.hpp  post_delete_handler.cpp  post_delete_handler.hpp  post_feed_cache.cpp  post_feed_cache.hpp  post_feed_handler.cpp  post_feed_handler.hpp  post_get_handler.cpp  post_get_handler.hpp  post_update_handler.cpp  post_update_handler.hpp
src/user/: password_hasher.cpp  password_hasher.hpp  user_get_handler.cpp  user_get_handler.hpp  user_register_handler.cpp  user_register_handler.hpp  user_search_handler.cpp  user_search_handler.hpp
tests/: conftest.py
